# paper-qa

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .ruff.toml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  a.ipynb  agent-requirements.txt  app.py  benchmark_results_eda.ipynb  dev-requirements.txt  doi_paper_manifest.csv  download_lfrqa.ipynb  example.txt.json  example2.txt  get-pip.py  google-requirements.txt  gradable.py  lfrqa_eda.ipynb  main.py  pinpong.py  play.py  pyproject.toml  pytest.ini  requirements.txt  router_test.py  setup.py  test.py
.github/: renovate.json5
.github/workflows/: build.yml  tests.yml
docs/: 2024-10-16_litqa2-splits.json5
docs/tutorials/: querying_with_clinical_trials.md  running_on_lfrqa.ipynb  running_on_lfrqa.md  settings_trial.ipynb  settings_tutorial.ipynb  settings_tutorial.md  where_do_I_get_papers.md
mcp-server-paperqa/: .gitignore  CHANGELOG.md  FEATURES.md  GEMINI_2_SETUP.md  GEMINI_SETUP.md  QUICKSTART.md  README.md  TESTING.md  TESTING_GUIDE.md  install.sh  mcp_config.example.json  mcp_config.gemini-2-5-pro.json  mcp_config.gemini.json  pyproject.toml  requirements.txt
mcp-server-paperqa/configs/: README.md  gemini-2-5-pro.json  gemini-2-flash.json  gemini-2-thinking.json  gemini-fast.json  gemini-full.json  gemini-high-quality.json
mcp-server-paperqa/src/paperqa_mcp/: __init__.py  server.py
mcp-server-paperqa/tests/: __init__.py  test_server.py
paperqa/: __init__.py  _ldp_shims.py  agent.py  binning.py  chains.py  cli.py  config.py  core.py  docs.py  docs_pinecone.py  lean_docs.py  litqa.py  llms.py  paths.py  prompts.py  qaprompts.py  rate_limiter.py  readers.py  settings.py  types.py  utils.py  version.py
paperqa/agents/: __init__.py  chains.py  docs.py  env.py  helpers.py  image_qa.py  main.py  models.py  prompts.py  search.py  task.py  tools.py  tools2.py
paperqa/clients/: __init__.py  client_models.py  crossref.py  exceptions.py  journal_quality.py  openalex.py  retractions.py  semantic_scholar.py  settings.py  shared_dicts.py  unpaywall.py  utils.py
paperqa/clients/client_data/: .gitignore  journal_quality.csv
paperqa/configs/: clinical_trials.json  contracrow.json  debug.json  fast.json  high_quality.json  openreview.json  tier1_limits.json  tier2_limits.json  tier3_limits.json  tier4_limits.json  tier5_limits.json  wikicrow.json
paperqa/contrib/: __init__.py  cli.py  openreview_paper_helper.py  zotero.py
paperqa/sources/: clinical_trials.py
reproduction/: README_aviary_litqa.md  get_paper.ipynb  run_litqa_gpt_v1.ipynb  run_litqa_gpt_v2.ipynb  run_litqa_gpt_v3.ipynb  run_litqa_llama.ipynb
reproduction/docs/: litqa-v2-public.jsonl  manual_download_needed.json
reproduction/results/: gpt_eval_results_v1.json  gpt_eval_results_v2.json  gpt_eval_results_v3.json
src/paperqa/: __init__.py  _ldp_shims.py  core.py  docs.py  llms.py  prompts.py  readers.py  settings.py  types.py  utils.py
tests/: .gitignore  conftest.py  duplicate_media_template.md  stub_manifest.csv  test_agents.py  test_binning.py  test_cli.py  test_clients.py  test_clinical_trials.py  test_configs.py  test_litqa.py  test_llm_json_parser.py  test_llms.py  test_paperqa.py  test_rate_limiter.py  test_task.py  test_utils.py
tests/cassettes/: TestLitQAEvaluation.test_from_question.yaml  TestLitQAEvaluation.test_from_question[What is my office-s zip code--94107-distractors0-the answer is 94107-correct-expected_dreturns0].yaml  TestLitQAEvaluation.test_from_question[What is my office-s zip code--94107-distractors1-the answer is 14004-incorrect-expected_dreturns1].yaml  TestLitQAEvaluation.test_from_question[What is my office-s zip code--94107-distractors2-the answer is 94106-incorrect-expected_dreturns2].yaml  TestLitQAEvaluation.test_from_question[What is my office-s zip code--94107-distractors3-Insufficient information-unsure-expected_dreturns3].yaml  TestLitQAEvaluation.test_from_question[What is my office-s zip code--94107-distractors4-the answer is 94106 or 94107-incorrect-expected_dreturns4].yaml  TestLitQAEvaluation.test_from_question[What is the meaning of life--42-distractors5-14-incorrect-expected_dreturns5].yaml  TestLitQAEvaluation.test_from_question[didnt-match-and-llm-has-innate-knowledge].yaml  TestLitQAEvaluation.test_from_question[didnt-match-and-no-llm-innate-knowledge].yaml  TestLitQAEvaluation.test_from_question[empty-answer1].yaml  TestLitQAEvaluation.test_from_question[empty-answer2].yaml  TestLitQAEvaluation.test_from_question[empty-answer3].yaml  TestLitQAEvaluation.test_from_question[matched-correct-option].yaml  TestLitQAEvaluation.test_from_question[matched-incorrect-option].yaml  TestLitQAEvaluation.test_from_question[matched-several-options].yaml  TestLitQAEvaluation.test_from_question[matched-unsure-option].yaml  TestLiteLLMModel.test_max_token_truncation.yaml  TestLiteLLMModel.test_max_token_truncation[with-router].yaml  TestLiteLLMModel.test_max_token_truncation[without-router].yaml  TestLiteLLMModel.test_run_prompt.yaml  TestLiteLLMModel.test_run_prompt[with-router].yaml  TestLiteLLMModel.test_run_prompt[without-router].yaml  TestTaskDataset.test_tool_failure.yaml  test_arxiv_doi_is_used_when_available.yaml  test_arxiv_dois.yaml  test_author_matching.yaml  test_bad_dois.yaml  test_bad_titles.yaml  test_bulk_doi_search.yaml  test_bulk_title_search.yaml  test_crossref_journalquality_fields_filtering.yaml  test_crossref_retraction_status.yaml  test_docs_lifecycle.yaml  test_does_openalex_work[10.1021-acs.jctc.5b00178-True].yaml  test_does_openalex_work[10.1021-acs.jctc.5b00178].yaml  test_does_openalex_work[not-in-openalex].yaml  test_does_openalex_work[not-oa-in-openalex].yaml  test_does_openalex_work[oa-in-openalex1].yaml  test_does_openalex_work[oa-in-openalex2].yaml  test_doi_search[paper_attributes0].yaml  (+39 more)
tests/stub_data/: dummy.docx  dummy.pptx  dummy.xlsx  dummy_jap.docx  example.html  example.txt  flag_day.html  gravity_hill.md  obama.txt  paper.docx  stub_manifest.csv  stub_manifest_nocitation.csv  stub_retractions.csv
tests/utils/: paper_helpers.py
(+56 files in other folders)
